# Games101-Assignment

./: .gitignore
Assignment0/Code/: CMakeLists.txt  main.cpp
Assignment1/Code/: CMakeLists.txt  main.cpp
Assignment2/Code/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment3/Code/: main.cpp  rasterizer.cpp
Assignment4/code/: main.cpp
Assignment5/Code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
Assignment6/Code/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
Assignment7/Code/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Ray.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  main.cpp
Assignment7/Result/: binary_16.ppm  binary_256.ppm
assignment8/src/: rope.cpp
